# robo-home

./: README.md
src/cartesian_controller/: CMakeLists.txt  package.xml
src/cartesian_controller/include/: cartesian_controller_class.h
src/cartesian_controller/src/: cartesian_controller.cpp  cartesian_controller_class.cpp
src/central_control/: CMakeLists.txt  package.xml
src/central_control/configs/: central_control_parameters.yaml  pick_motions.yaml
src/central_control/launch/: central_control.launch
src/central_control/src/: central_control.cpp
src/gripper/gripper_stiffness_controller/: CMakeLists.txt  package.xml
src/gripper/gripper_stiffness_controller/configs/: controller_parameters.yaml
src/gripper/gripper_stiffness_controller/launch/: gripper_and_skin_controller.launch  gripper_stiffness_controller.launch
src/gripper/gripper_stiffness_controller/src/: gripper_stiffness_controller.cpp
src/gripper/gripper_stiffness_controller/srv/: gripper_control.srv
src/gripper/skin_prox_correction/: CMakeLists.txt  package.xml
src/gripper/skin_prox_correction/configs/: skin_prox_correction.yaml
src/gripper/skin_prox_correction/include/: skin_prox_correction_class.h
src/gripper/skin_prox_correction/launch/: skin_prox_correction.launch
src/gripper/skin_prox_correction/src/: skin_prox_correction.cpp  skin_prox_correction_class.cpp
src/perception/from2Dto3D/: CMakeLists.txt  from2Dto3D.cpp  from2Dto3D.cpp.old  package.xml
src/perception/object_recognition/: CMakeLists.txt  package.xml
src/perception/object_recognition/config/: ros.yaml
src/perception/object_recognition/launch/: darknet_ros.launch  object_recognition.launch
src/perception/object_recognition/src/: ObjectRecognition.cpp  ObjectRecognition.cpp.old
src/perception/perception_msgs/: CMakeLists.txt  package.xml
src/perception/perception_msgs/msg/: ClassCentroids.msg  Job.msg
src/perception/perception_msgs/srv/: CloudCentriod.srv  GetCenter.srv  GetCentroid.srv  SystGetCentroid.srv  SystYOLO_SetState.srv
src/perception/plane_segmentation/: CMakeLists.txt  package.xml
src/perception/plane_segmentation/src/: PlaneSegmentation.cpp  PlaneSegmentation.cpp.old
src/set_marker_goal/: CMakeLists.txt  package.xml
src/set_marker_goal/src/: set_marker_goal.cpp
src/stiffness_control_msgs/: CMakeLists.txt  package.xml
src/stiffness_control_msgs/srv/: WristDataUpdate.srv
src/wrist_stiffness_controller/: CMakeLists.txt  package.xml
src/wrist_stiffness_controller/config/: stiffness_params.yaml
src/wrist_stiffness_controller/launch/: wrist_stiffness_controller.launch
src/wrist_stiffness_controller/src/: msg_tf_node.cpp  wrist_stiffness_controller.cpp
