<?xml version="1.0"?>
<package>
  <name>set_marker_goal</name>
  <version>0.10.3</version>
  <description> package</description>

  <maintainer email="husiqixiang@gmail.com">siqihu</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/interactive_marker_tutorials</url>

  <author >siqi hu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
