<?xml version="1.0"?>
<package>
  <name>gripper_stiffness_controller</name>
  <version>0.1.0</version>
  <description>gripper_stiffness_controller package</description>
  <license>BSD</license>

  <author email="allenwch@hotmail.com">ChenghaoWang</author>
  <maintainer email="allenwch@hotmail.com">ChenghaoWang</maintainer>
  <author email="chensheng.chen@outlook.com">chenshengchen</author>
  <maintainer email="chensheng.chen@outlook.com">chenshengchen</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pal_interaction_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pal_interaction_msgs</run_depend>


</package>
